Added favicon and version info

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MoonSucker - Water Network Management</title>
+    <!-- Favicon (appears in browser tab) -->
+    <link rel="icon" href="images/logo.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -15,8 +17,9 @@
             <p>Advanced Water Network Management Software</p>
         </div>
     </header>
+    
 
-    <section class="hero">
+    <section class="hero dark-section"></section>
         <div class="container">
             <h2>Streamline Your Water Network Operations</h2>
             <p>Comprehensive tools for modeling, optimization, and monitoring of water distribution systems</p>
@@ -67,8 +70,11 @@
         <div class="container">
             <h2>Get MoonSucker</h2>
             <p>The software is updated monthly with new features and improvements.</p>
+            <div class="version-box">
+                <p><strong>Latest Version:</strong> v1.0</p>
+                <p><strong>Released:</strong> June 15, 2023</p>
+            </div>
             <a href="#" class="cta-button">Download Latest Version</a>
-            <p class="note">Current version: v1.0 (Updated: June 2023)</p>
         </div>
     </section>
 
