--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MoonSucker - Water Network Management</title>
-    <!-- Favicon (appears in browser tab) -->
     <link rel="icon" href="images/logo.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -17,13 +16,16 @@
             <p>Advanced Water Network Management Software</p>
         </div>
     </header>
-    
 
-    <section class="hero dark-section"></section>
+    <section class="hero">
         <div class="container">
-            <h2>Streamline Your Water Network Operations</h2>
-            <p>Comprehensive tools for modeling, optimization, and monitoring of water distribution systems</p>
-            <a href="#download" class="cta-button">Download Latest Version</a>
+            <h2>Streamlining Water Network Operations</h2>
+            <p>Comprehensive tools for modeling, optimization, and monitoring</p>
+            <div class="hero-buttons">
+                <a href="#download" class="cta-button">Download Latest Version</a>
+                <a href="#gallery" class="secondary-button">View Software Images</a>
+                <a href="https://www.youtube.com/@MoonSucker" class="secondary-button" target="_blank">Watch Demo Video</a>
+            </div>
         </div>
     </section>
 
@@ -72,16 +74,62 @@
             <p>The software is updated monthly with new features and improvements.</p>
             <div class="version-box">
                 <p><strong>Latest Version:</strong> v1.0</p>
-                <p><strong>Released:</strong> June 15, 2023</p>
+                <p><strong>Released:</strong> June 15, 2025</p>
             </div>
             <a href="#" class="cta-button">Download Latest Version</a>
         </div>
     </section>
 
+
+
+
+    <section id="gallery" class="gallery">
+        <div class="container">
+            <h2>Software Screenshots</h2>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <img src="images/screenshots/Screenshot (1289).png" alt="Screenshot 1289">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/screenshots/Screenshot (1291).png" alt="Screenshot 1291">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/screenshots/Screenshot (1307).png" alt="Screenshot 1307">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/screenshots/Screenshot (1321).png" alt="Screenshot 1321">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/screenshots/Screenshot (1325).png" alt="Screenshot 1325">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/screenshots/Screenshot (1326).png" alt="Screenshot 1326">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/screenshots/Screenshot (1341).png" alt="Screenshot 1341">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/screenshots/Screenshot (1346).png" alt="Screenshot 1346">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/screenshots/Screenshot (1348).png" alt="Screenshot 1348">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
     <footer>
         <div class="container">
-            <p>© 2023 MoonSucker Water Network Management</p>
+            <p>© 2025 MoonSucker Water Network Management</p>
         </div>
     </footer>
 </body>
 </html>
+
