--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         body {
             line-height: 1.6;
             color: #333;
-            background-color: #f9f9f9;
+            background-color: #9d9090;
         }
         .container {
             width: 90%;
@@ -45,18 +45,42 @@
         }
 
         /* Header Styles */
+        /* Header Styles */
+        
         header {
-            background-color: #2c3e50;
+            background: linear-gradient(
+        to right,
+        rgba(55, 90, 30, 1) 0%,
+        rgba(55, 35, 60, 1) 16.6%,
+        rgba(30, 25, 0, 1) 33.3%,
+        rgba(50, 5, 255, 1) 50%,
+        rgba(40, 40, 5, 0.1) 66.6%,
+        rgba(55, 40, 255, 1) 83.3%,
+        rgba(255, 50, 160, 1) 100%
+    );
             color: white;
             padding: 20px 0;
             text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 100%;
+            background-color: #2c3e50;
+            z-index: -1;
         }
         header .logo {
             height: 80px;
             margin-bottom: 15px;
         }
         header h1 {
-            color: white;
+            color: rgb(255, 255, 255);
             font-size: 2.5rem;
         }
 
@@ -70,19 +94,20 @@
             transition: all 0.3s ease;
         }
         .cta-button {
-            background-color: #3498db;
-            color: white;
+            background-color: #31004a;
+            color: cyan;
+            border: 1px solid #068495;
         }
         .cta-button:hover {
-            background-color: #2980b9;
+            background-color: #6a049d;
         }
         .secondary-button {
-            background-color: #ecf0f1;
-            color: #2c3e50;
-            border: 1px solid #bdc3c7;
+            background-color: #1b0228;
+            color: #e6c41b;
+            border: 1px solid #068495;
         }
         .secondary-button:hover {
-            background-color: #bdc3c7;
+            background-color: #580485;
         }
 
         /* Section Styles */
@@ -99,11 +124,11 @@
             text-align: center;
             background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/hero-bg.jpg');
             background-size: cover;
-            color: white;
+            color: rgb(8, 226, 153);
         }
         .hero h2 {
             font-size: 2.5rem;
-            color: white;
+            color: rgb(2, 51, 26);
         }
         .hero p {
             font-size: 1.2rem;
