--- a/index.html
+++ b/index.html
@@ -50,19 +50,20 @@
         }
 
         /* Header Styles */
-        /* Header Styles */
-        
+
         header {
             background: linear-gradient(
-        to right,
-        rgba(55, 90, 30, 1) 0%,
-        rgba(55, 35, 60, 1) 16.6%,
-        rgba(30, 25, 0, 1) 33.3%,
-        rgba(50, 5, 255, 1) 50%,
-        rgba(40, 40, 5, 0.1) 66.6%,
-        rgba(55, 40, 255, 1) 83.3%,
-        rgba(255, 50, 160, 1) 100%
-    );
+                to right,
+                rgba(55, 90, 30, 1) 0%,
+                rgba(55, 35, 60, 1) 16.6%,
+                rgba(30, 25, 0, 1) 33.3%,
+                rgba(50, 5, 255, 1) 50%,
+                rgba(40, 40, 5, 0.1) 66.6%,
+                rgba(55, 40, 255, 1) 83.3%,
+                rgba(255, 50, 160, 1) 100%
+            );
+            background-size: 300% 100%;
+            animation: gradientShift 10s linear infinite alternate;
             color: white;
             padding: 20px 0;
             text-align: center;
@@ -70,16 +71,17 @@
             overflow: hidden;
         }
 
-        header::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 100%;
-            background-color: #2c3e50;
-            z-index: -1;
+        @keyframes gradientShift {
+            0% {
+                background-position: 0% 0%;
+            }
+            100% {
+                background-position: 100% 0%;
+            }
         }
+
+
+
         header .logo {
             height: 100px;
             margin-bottom: 15px;
@@ -382,6 +384,96 @@
                 margin: 5px 0;
             }
         }
+
+
+        /* Formspree Form Styles */
+    .fs-form {
+        display: grid;
+        row-gap: 1.5rem;
+    }
+
+    .fs-field {
+        display: flex;
+        flex-direction: column;
+        row-gap: 0.375rem;
+    }
+
+    .fs-label {
+        color: #c1d6eb;
+        display: block;
+        font-size: 0.875rem;
+        font-weight: 500;
+        line-height: 1.25rem;
+    }
+
+    .fs-input, .fs-textarea {
+        appearance: none;
+        border-radius: 0.375rem;
+        border-width: 0;
+        box-shadow: #94a3b8 0 0 0 1px inset;
+        color: #1e293b;
+        font-size: 1rem;
+        height: 2.5rem;
+        line-height: 1.5rem;
+        outline: none;
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
+        width: 100%;
+    }
+
+    .fs-textarea {
+        height: 150px;
+        padding: 0.75rem;
+        resize: vertical;
+    }
+
+    .fs-input:focus-visible, 
+    .fs-textarea:focus-visible {
+        box-shadow: #64748b 0 0 0 1.5px inset;
+        outline: 3px solid #cbd5e1;
+        outline-offset: 0;
+    }
+
+    .fs-button {
+        background-color: #31004a;
+        border-radius: 0.375rem;
+        color: cyan;
+        cursor: pointer;
+        font-size: 0.875rem;
+        font-weight: 500;
+        line-height: 1rem;
+        padding: 1rem 2rem;
+        transition: all 0.3s ease;
+        border: 1px solid #068495;
+    }
+
+    .fs-button:hover {
+        background-color: #6a049d;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </style>
 </head>
 <body>
@@ -483,7 +575,23 @@
         </div>
     </section>
 
-    <!-- New Contact Section -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- New Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
             <h2>Contact Us</h2>
@@ -501,26 +609,43 @@
                         <a href="https://linkedin.com/company/moonsucker" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://twitter.com/moonsucker" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a href="https://github.com/MunsakaPKM/MoonSucker" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                        <a href ="https://www.youtube.com/@MoonSucker" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.youtube.com/@MoonSucker" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 
                 <div class="contact-form">
                     <h3>Send Us a Message</h3>
-                    <form id="messageForm">
-                        <input type="text" placeholder="Your Name" required>
-                        <input type="email" placeholder="Your Email" required>
-                        <input type="text" placeholder="Subject">
-                        <textarea placeholder="Your Message" required></textarea>
+                    <form id="messageForm" action="https://formspree.io/f/xvgaddbb" method="POST" class="fs-form">
+                        <div class="fs-field">
+                            <label class="fs-label" for="name">Name</label>
+                            <input class="fs-input" id="name" name="name" type="text" required />
+                        </div>
+                        <div class="fs-field">
+                            <label class="fs-label" for="email">Email</label>
+                            <input class="fs-input" id="email" name="email" type="email" required />
+                        </div>
+                        <div class="fs-field">
+                            <label class="fs-label" for="subject">Subject</label>
+                            <input class="fs-input" id="subject" name="subject" type="text" />
+                        </div>
+                        <div class="fs-field">
+                            <label class="fs-label" for="message">Message</label>
+                            <textarea class="fs-textarea" id="message" name="message" required></textarea>
+                        </div>
                         <div class="form-buttons">
-                            <button type="submit">Send Message</button>
-                            <button type="button" onclick="document.getElementById('messageForm').reset()">Clear</button>
+                            <button type="button" onclick="showPreview()" class="fs-button">Preview Message</button>
+                            <button type="button" onclick="document.getElementById('messageForm').reset()" class="secondary-button">Clear</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </section>
+
+
+
+
+
 
    
     <section id="creators" class="creators">
@@ -562,18 +687,14 @@
         </div>
     </footer>
 
-    <form id="messageForm" action="https://formspree.io/f/xvgaddbb" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <input type="text" name="subject" placeholder="Subject">
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <div class="form-buttons">
-            <button type="button" onclick="showPreview()">Preview Message</button>
-            <button type="button" onclick="document.getElementById('messageForm').reset()">Clear</button>
-        </div>
-    </form>
+
 
     <script>
+
+
+
+
+
         // Modal functions
         function closeModal() {
             document.getElementById('messageModal').style.display = 'none';
